--- a/src/components/styles/search.css
+++ b/src/components/styles/search.css
@@ -79,14 +79,14 @@
   padding: 0.25rem 0.9rem;
 }
 .search-results-div ul li a:link, .search-results-div ul li a:visited {
-  color: #57413d !important;
+  color: #0c3b6d !important;
 }
 .search-results-div ul li a:hover {
   background-color: #505757;
-  color: #e2bbb4 !important;
+  color: #a3c3e4 !important;
 }
 .search-results-div h5 {
-  /* color: #000; */
+  color: #800000;
   margin-bottom: 0.1rem;
   font-size: 1.2rem;
   font-weight: 700;
